# EBRAINS-orchestrator

./: CMakeLists.txt  README.md
cmake/: CheckNEST.cmake  FindPython3Module.cmake
co_simulation_actions/: zerlaut_nest.xml  zerlaut_parameters.xml
co_simulation_plans/: zerlaut_nest_on_local_system.xml
